Remove Log Search API and Prometheus (#1512)
